--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
 rabbit.interval=10
+url=jdbc:postgresql://127.0.0.1:5432/grabber
+username=postgres
+password=postgres
+driver-class-name=org.postgresql.Driver
