--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,6 +1,7 @@
-url=jdbc:postgresql://127.0.0.1:5432/grabber
-username=postgres
-password=postgres
-jdbc.driver=org.postgresql.Driver
-time=100
+time=120
 port=9000
+grabber.link=https://career.habr.com/vacancies/java_developer
+db.url=jdbc:postgresql://127.0.0.1:5432/grabber
+db.username=postgres
+db.password=postgres
+jdbc.driver=org.postgresql.Driver
