--- a/src/main/resources/grabber.properties
+++ b/src/main/resources/grabber.properties
@@ -1,5 +1,5 @@
-rabbit.interval=4
+grabber.interval=4
 db.url=jdbc:postgresql://127.0.0.1:5432/grabber
 db.username=postgres
 db.password=postgres
-db.driver-class-name=org.postgresql.Driver
+jdbc.driver=org.postgresql.Driver
